# cpp-study

./: 文件输入和输出.sln
version1/Flappy_Bird/: Flappy_Bird.cpp
文件输入和输出/: Data.txt  FileName.bak  FileName.cpp  文件输入和输出.vcxproj
游戏/: CMakeLists.txt  README.md  build.bat  build_mingw.bat  compile_simple.bat  install_mingw.bat  install_sfml.bat  install_sfml_manual.bat  install_sfml_simple.bat  main.cpp  run_game.bat  run_simple.bat
